# Raytracing

./: .gitignore  .gitmodules  LICENSE  README.md  Raytracing.sln
Raytracing/: CMakeLists.txt  Raytracing.vcxproj  Raytracing.vcxproj.filters  raytraced_softshadow200.ppm  raytraced_softshadow350and5000rays.ppm  raytracer.cpp  settings.h  whitted.cpp
Raytracing/exampleRenders/: raytraced_softshadow500offset.ppm
Raytracing/inc/: canvas.h
Raytracing/src/: canvas.cpp  raytracer.cpp
